src/test/deca/syntax/parser/valid/test/arbre_crochets_vide.deca
// Description:
//    Programme minimaliste testant un arbre pour des crochets vide
//
// Resultats:
//    
//
// Historique:
//    cree le 05/01/2023

{}
