src/test/deca/syntax/parser/invalid/test/test_pars_inv_println_oubli_expr.deca
// Description:
//    tests de programme incorrect syntaxiquement pour le println
//
// Resultats:
//    Ligne 12 : Erreur (oubli (expr))
//    
//
// Historique:
//    cree le 04/01/2023

{
    println;
}
